--- a/styles/index.css
+++ b/styles/index.css
@@ -20,6 +20,24 @@
 #avatar {
     display: flex;
     justify-content: center;
+    position: fixed;
+    top: 30%;
+    bottom: 30%;
+    right: 50%;
+    left: 50%;    
 }
+
+/* Footer */
+
+#footer {
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 1rem;
+    width: 100%;
+}
+
 
 
