--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 /* Top UI */
 #topUI {
     border-style: 1px solid black;
@@ -35,8 +41,8 @@
     bottom: 0;
     flex-direction: row;
     justify-content: space-around;
-    margin: 1rem;
     width: 100%;
+    padding: 1rem;
 }
 
 
