--- a/styles/index.css
+++ b/styles/index.css
@@ -26,15 +26,13 @@
 #avatar {
     display: flex;
     justify-content: center;
-    position: fixed;
-    top: 30%;
-    bottom: 30%;
-    right: 50%;
-    left: 50%;    
+    position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
 }
 
 /* Footer */
-
 #footer {
     display: flex;
     position: fixed;
