--- a/styles/shop.css
+++ b/styles/shop.css
@@ -31,12 +31,9 @@
 #middleUI {
     margin: 10px;
     display: flex;
+    align-items: center;
     flex-direction: column;
     text-align: center;
-    position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
 }
 
 #banner {
@@ -44,17 +41,21 @@
     flex-direction: column;
     align-items: center;
     border: 1px solid black;
-    border-radius: 10px; 
+    border-radius: 10px;
+    padding: 1em;
     
 }
 
 #bannerPhoto {
-    width: 150%;
+    width: 80%;
 }
 
 #pullButtons {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    padding: 10px;
+}
 
+#pullButtons button {
+    margin: 1rem 2rem;
 }
