--- a/styles/shop.css
+++ b/styles/shop.css
@@ -34,6 +34,7 @@
     align-items: center;
     flex-direction: column;
     text-align: center;
+    color: #5A3DBD;
 }
 
 #banner {
@@ -60,6 +61,8 @@
     border: 1px solid black;
     padding: 1em;
     border-radius: 5rem;
+    color: #5A3DBD;
+    background-color: white;
 }
 
 
