--- a/styles/general.css
+++ b/styles/general.css
@@ -2,4 +2,32 @@
     font-family: "Poppins", sans-serif;
         font-weight: 400;
         font-style: normal;
+            margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+}
+
+/* Top UI */
+#topUI {
+    border-style: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    margin: 1rem;
+}
+
+#currencyBox {
+    display: flex;
+    flex-direction: row;
+    border: 1px solid black;
+    border-radius: 10px;
+    width: 25%;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#currency {
+    display: flex;
+    align-items: center;
+    margin: 5px;
 }
