--- a/styles/shop.css
+++ b/styles/shop.css
@@ -1,30 +1,9 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 /* Top UI */
 #topUI {
-    display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 10px;
-}
 
-#currencyBox {
-    display: flex;
-    flex-direction: row;
-    border: 1px solid black;
-    border-radius: 10px;
-    width: 25%;
-    justify-content: space-around;
-}
-
-#currency {
-    display: flex;
-    align-items: center;
-    margin: 5px;
 }
 
 /* Middle UI */
@@ -41,13 +20,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid black;
-    border-radius: 10px;
-    padding: 1em;
+    margin: 1rem;
 }
 
 #bannerPhoto {
-    width: 80%;
+    width: 100%;
+    border-radius: 1rem;
+}
+
+#banner h1 {
+    position: absolute;
+    top: 13%;
 }
 
 #pullButtons {
