--- a/styles/history.css
+++ b/styles/history.css
@@ -1,4 +1,45 @@
+/* Top UI */
+body{
+    background-color: #5A3DBD;
+}
+#topUI {
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
 /* hide contentJournal content */
 #contentJournal {
     display: none;
+}
+
+.historyBtn{
+    font-weight: bold;
+    padding: 10px;
+    border-radius: 100px;
+    background-color: transparent;
+    border-color: white;
+    color: white;
+    padding: 10px 20px;
+}
+
+.btnDivider{
+    color: white;
+    font-size: 30px;
+}
+
+.buttonBox{
+    width: 60%;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.historyBox{
+    background-color: white;
+    margin: 40px 20px;
+    border-radius: 10px;
+    padding: 20px;    
+    
 }
