--- a/styles/general.css
+++ b/styles/general.css
@@ -1,10 +1,11 @@
 *{
     font-family: "Poppins", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-            margin: 0;
-                padding: 0;
-                box-sizing: border-box;
+    font-weight: 400;
+    font-style: normal;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 16px;
 }
 
 /* Background */
