--- a/styles/icons/clothesIcon.css
+++ b/styles/icons/clothesIcon.css
@@ -1,7 +1,4 @@
 .material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
+  font-size: 40px;
+  color: #5A3DBD;
 }
