Update currency dollarSign colour to yellow

--- a/styles/icons/currency.css
+++ b/styles/icons/currency.css
@@ -1,4 +1,5 @@
-.material-symbols-outlined {
+#shopDollarSign {
+  color: rgb(216, 183, 16);
   font-variation-settings:
   'FILL' 0,
   'wght' 400,
