--- a/styles/history.css
+++ b/styles/history.css
@@ -18,7 +18,7 @@ body{
     padding: 10px;
     border-radius: 100px;
     background-color: transparent;
-    border-color: white;
+    border: 1px solid white;
     color: white;
     padding: 10px 20px;
 }
@@ -50,7 +50,7 @@ body{
     border-radius: 100px;
     background-color: white;
     color: #5A3DBD;
-    border-color: white;
+    border: 1px solid white;
     padding: 10px 20px;
 
 }
