--- a/styles/index.css
+++ b/styles/index.css
@@ -1,12 +1,12 @@
 
 /* Character Avatar */
 #avatar {
-    display: flex;
-    justify-content: center;
-    position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+    /* width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+    height: 30%; */
+
+
 }
 
 /* Footer */
@@ -74,6 +74,14 @@
     color: white !important;
 }
 
-#characterImg{
-    width: 130%;
+#characterImg, #shoesImg, #shortsImg, #TshirtImg{
+    width: 100%;
+}
+#character, #shoes, #top, #bottom{
+    width: 70%;
+}
+.dressing{
+    position: absolute;
+    top: 20px;
+    left: 20px;
 }
