--- a/styles/index.css
+++ b/styles/index.css
@@ -133,10 +133,12 @@
     justify-content: space-between;
     width: 90%;
 }
+#moodDiv span{
+    color: white;
+}
 .moodButton{
-    background-color: white;
-    border: 1px solid #5A3DBD;
-    border-radius: 5px;
+    background-color: transparent;
+    border: 0px solid white;
     padding: 2px;
 }
 
@@ -167,4 +169,9 @@
 .activated{
     color: #5A3DBD;
     font-weight: bold;
+}
+
+.moodSelected span{
+    color: orange !important;
+
 }
