--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,7 @@
     width: 100%;
     padding: 1rem;
     background-color: white;
+    border-top: 3px solid #5A3DBD;
 }
 
 
@@ -176,7 +177,11 @@
 
 }
 
-/* dressing categories */
+/* wardrobe */
+
+#wardrobeScreen {
+    border: none;
+}
 
 #wardrobeContainer {
     display: flex;
@@ -184,7 +189,9 @@
     justify-content: space-around;
     width:100%;
     height: 100%;
+    border-bottom: 3px solid #5A3DBD;
 }
+
 #itemCategories {
     display: flex;
     flex-direction: row;
