--- a/styles/index.css
+++ b/styles/index.css
@@ -97,6 +97,9 @@
 #character, #shoes, #top, #bottom{
     width: 70%;
 }
+#shoes{
+    width: 83%;
+}
 #pet{
     display: flex;
     justify-content: end;
@@ -105,6 +108,7 @@
     width: 40%;
 }
 /* journal window css */
+
 #journalScreen{
     width: 90%;
     margin: auto;
@@ -121,6 +125,9 @@
     color: white;
     margin-bottom: 10px;
     
+}
+#journalScreenTopUI{
+    width: 90%;
 }
 #journalEntry{
     width: 90%;
@@ -151,7 +158,7 @@
 #closeJournalButton{
     margin-top: 20px;
     padding: 10px;
-    width: 70%;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
     border-radius: 50px;
